--- a/index.html
+++ b/index.html
@@ -4,16 +4,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Mohit Girase | Software Developer Portfolio</title>
-    <meta name="description" content="Portfolio of Mohit Girase, Software Developer skilled in Java, Spring Boot, React, Python, SQL, and Machine Learning. Explore projects, skills, and experience at COEP Technological University and ZS Associates.">
+    <meta name="description" content="I'm Mohit Girase, a dedicated software developer with a Bachelor of Technology from COEP Technological University. My expertise lies in Java backend development, where I've built scalable systems using Spring Boot, Spring Data JPA, and Hibernate ORM. I am adept at designing RESTful APIs and have experience with databases like MySQL and PostgreSQL. Explore my projects to see how I combine strong technical skills with practical problem-solving.">
     <meta name="keywords" content="Mohit Girase, Software Developer, Java Developer, Spring Boot, React, Python, SQL, Full Stack Developer, Machine Learning, Deep Learning, Portfolio, Pune, India, COEP, ZS Associates">
     <meta name="author" content="Mohit Girase">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <!-- Open Graph (for LinkedIn, Facebook, WhatsApp sharing) -->
     <meta property="og:title" content="Mohit Girase | Software Developer Portfolio">
-    <meta property="og:description" content="Explore the projects, skills, and experience of Mohit Girase, a Software Developer specializing in Java, Spring Boot, React, and Machine Learning.">
+    <meta property="og:description" content=" I'm Mohit Girase, a dedicated software developer with a Bachelor of Technology from COEP Technological University. My expertise lies in Java backend development, where I've built scalable systems using Spring Boot, Spring Data JPA, and Hibernate ORM. I am adept at designing RESTful APIs and have experience with databases like MySQL and PostgreSQL. Explore my projects to see how I combine strong technical skills with practical problem-solving.">
     <meta property="og:image" content="https://github.com/MohitGirase.png">
-    <meta property="og:url" content="http://linkedin.com/in/mohit-girase2003/">
+    <meta property="og:url" content="https://mohit-girase-portfolio.vercel.app/">
     <meta property="og:type" content="website">
 
     <!-- <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -57,7 +57,7 @@
             <div class="hero-badge">
                 Available for New Opportunities
             </div>
-            <h1>Software Developer Enthusiast</h1>
+            <h1>Software Development Enthusiast</h1>
             <p class="hero-subtitle">Turning Ideas into Reliable, High Performance Code</p>
             
             <div class="hero-stats">
